--- a/gradientes.html
+++ b/gradientes.html
@@ -14,6 +14,15 @@
             /*background: linear-gradient(to bottom right, white, purple, black, blue);*/
             background: repeating-radial-gradient(white 10%, purple 15%, black 20%);
         }
+
+        div {
+            width: 100px;
+            height: 100px;
+            border: 1px solid black;
+            margin-bottom: 20px;
+        }
+
+        
     </style>
 </head>
 <body>
