--- a/formularioCSS.html
+++ b/formularioCSS.html
@@ -3,6 +3,7 @@
 <html>
     
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
 	<title>Cadastro de Usuário com CSS</title>
     <style type="text/css">
