--- a/Boostrap/BootstrapSiteExemplo.html
+++ b/Boostrap/BootstrapSiteExemplo.html
@@ -11,12 +11,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+
+    <style type="text/css">
+
+        .myColor {
+            color: rgb(113, 41, 222);
+        }
+
+        .myContainer{
+            background-color: rgba(255, 193, 7, 0.6)
+        }
+    </style>
 </head>
 
 <body>
 
     <!-- Inicio Navbar-->
-    <nav class="navbar navbar-expand-lg " style="background-color: rgb(216, 106, 50)">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(25, 25, 25)">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Logo</a> <!-- # é link para a própria página-->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -68,6 +80,46 @@
         </div>
     </nav>
     <!-- Fim da Navbar-->
+
+    <!-- Container Inicial -->
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col-md-2 col-sm-12">
+            </div>
+
+            <div class="col-md-3 col-sm-12 pt-2">
+                <i class="bi bi-telephone-fill myColor"></i> (19) 2113-3300
+            </div>
+
+            <div class="col-md-3 col-sm-12 pt-2">
+                <i class="bi bi-envelope-fill myColor"></i> cotil@cotil.unicamp.br
+            </div>
+
+            <div class="col-md-4 col-sm-12">
+                <button class="btn btn-outline-light border-warning myColor">
+                    <i class="bi bi-facebook"></i>
+                </button>
+                <button class="btn btn-outline-light border-warning myColor">
+                    <i class="bi bi-youtube"></i>
+                </button>
+                <button class="btn btn-outline-light border-warning myColor">
+                    <i class="bi bi-instagram"></i>
+                </button>
+            </div>
+        </div>
+
+        <hr>
+
+        <h1 class="display-3"> Colégio Técnico de Limeira</h1>
+        <p class="lead myColor"> Conheça a nossa escola!</p>
+    </div>
+    <!--Fim Container Inicial-->
+
+    <!-- Container Cursos-->
+    <div class="container myContainer">
+        <h4 class="display-5">Nossos Cursos</h4>
+    </div>
+    <!--Fim Container Cursos-->
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
