carrosel de imagens

--- a/Boostrap/dsd.html
+++ b/Boostrap/dsd.html
@@ -91,7 +91,7 @@
     <!-- Fim da Navbar-->
 
     <!-- Container Cursos-->
-    <div class="container myContainer">
+    <div class="container myContainer pb-3">
         <h4 class="display-4"><i class="bi bi-laptop"></i> Técnico em Desenvolvimento de Sistemas</h4>
 
         <p class="lead">Informações gerais:</p>
@@ -104,7 +104,8 @@
                         <h3 class="display-6">O Curso</h3>
                     </button>
                 </h2>
-                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                    data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
                         <h6 class="display-6">Objetivo</h6>
                         Formar profissional atualizado, com visão crítica, pautada pela multidisciplinaridade, pelo
@@ -135,38 +136,33 @@
                         aos usuários.
                     </div>
                 </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                            <h5 class="display-6">Disciplinas</h5>
-                        </button>
-                    </h2>
-                    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
-                        data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">
-                            <ul>
-                                <li>Análise e Projeto de Sistemas</li>
-                                <li>Banco de Dados</li>
-                                <li>Informática</li>
-                                <li>Lógica de programação</li>
-                                <li>Sistemas Operacionais e Redes</li>
-                                <li>Desenvolvimento de Aplicações WEB</li>
-                                <li>Desenvolvimento de Aplicações Desktop</li>
-                                <li>Linguagem de Programação Multiplataforma</li>
-                                <li>Projeto integrador</li>
-                                <li>Inovações e Empreendedorismo</li>
-                            </ul>
-                        </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                        <h5 class="display-6">Disciplinas</h5>
+                    </button>
+                </h2>
+                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                        <ul>
+                            <li>Análise e Projeto de Sistemas</li>
+                            <li>Banco de Dados</li>
+                            <li>Informática</li>
+                            <li>Lógica de programação</li>
+                            <li>Sistemas Operacionais e Redes</li>
+                            <li>Desenvolvimento de Aplicações WEB</li>
+                            <li>Desenvolvimento de Aplicações Desktop</li>
+                            <li>Linguagem de Programação Multiplataforma</li>
+                            <li>Projeto integrador</li>
+                            <li>Inovações e Empreendedorismo</li>
+                        </ul>
                     </div>
-
-                    
-                    
                 </div>
             </div>
         </div>
-    </div>
-
     </div>
     <!--Fim Container Cursos-->
 
