--- a/Boostrap/med.html
+++ b/Boostrap/med.html
@@ -92,7 +92,7 @@
     <!-- Fim da Navbar-->
 
     <!-- Container Cursos-->
-    <div class="container myContainer">
+    <div class="container myContainer pb-3">
         <h4 class="display-5"><i class="bi bi-gear-wide"></i> Técnico em Mêcanica</h4>
         
     </div>     
