--- a/Boostrap/nossaEscola.html
+++ b/Boostrap/nossaEscola.html
@@ -14,12 +14,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <style type="text/css">
-
         .myColor {
             color: rgb(21, 21, 21);
         }
 
-        .myContainer{
+        .myContainer {
             background-color: rgba(255, 193, 7, 0.7)
         }
 
@@ -27,7 +26,7 @@
             height: 250px;
         }
 
-        .card{
+        .card {
             margin-bottom: 20px;
         }
     </style>
@@ -51,16 +50,16 @@
                         <!-- Active destaca a página em que o usuário está-->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="nossaEscola.html">Nossa Escola</a>
+                        <a class="nav-link active" href="nossaEscola.html">Nossa Escola</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Cursos
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="dsd.html">Desenvolvimento de Sistemas</a></li>
-                            <li><a class="dropdown-item active" href="ccd.html">Edificações</a></li>
+                            <li><a class="dropdown-item" href="ccd.html">Edificações</a></li>
                             <li><a class="dropdown-item" href="enf.html">Enfermagem </a></li>
                             <li><a class="dropdown-item" href="geo.html">Geodésia e Cartografia</a></li>
                             <li><a class="dropdown-item" href="med.html">Mecânica </a></li>
@@ -93,9 +92,45 @@
 
     <!-- Container Cursos-->
     <div class="container myContainer pb-3">
-        <h4 class="display-5"><i class="bi bi-bricks"></i> Técnico em Edificações</h4>
-        
-    </div>     
+        <h4 class="display-4"><i class="bi bi-pen"></i> Nossa Escola</h4>
+
+        <p class="lead">Essa escola vai sugar tua alma</p>
+
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="Imagens/cotil.jpg" class="d-block w-100" alt="...">
+              </div>
+
+              <div class="carousel-item">
+                <img src="Imagens/entradaCotil.jpg" class="d-block w-100" alt="...">
+              </div>
+
+              <div class="carousel-item">
+                <img src="Imagens/galeria.jpeg" class="d-block w-100" alt="...">
+              </div>
+
+            </div>
+
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+
+          </div>
+    
+    </div>
     <!--Fim Container Cursos-->
 
     <!-- JavaScript Bundle with Popper -->
