coisinhas de ontem que eu perdi

--- a/Boostrap/dsd.html
+++ b/Boostrap/dsd.html
@@ -71,7 +71,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="nossaEscola.html">Contato</a>
+                        <a class="nav-link" href="contato.html">Contato</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled">Processo Seletivo</a>
