--- a/Boostrap/contato.html
+++ b/Boostrap/contato.html
@@ -14,12 +14,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <style type="text/css">
-
         .myColor {
             color: rgb(21, 21, 21);
         }
 
-        .myContainer{
+        .myContainer {
             background-color: rgba(255, 193, 7, 0.7)
         }
 
@@ -27,7 +26,7 @@
             height: 250px;
         }
 
-        .card{
+        .card {
             margin-bottom: 20px;
         }
     </style>
@@ -51,16 +50,16 @@
                         <!-- Active destaca a página em que o usuário está-->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="nossaEscola.html">Nossa Escola</a>
+                        <a class="nav-link active" href="nossaEscola.html">Nossa Escola</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Cursos
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="dsd.html">Desenvolvimento de Sistemas</a></li>
-                            <li><a class="dropdown-item active" href="ccd.html">Edificações</a></li>
+                            <li><a class="dropdown-item" href="ccd.html">Edificações</a></li>
                             <li><a class="dropdown-item" href="enf.html">Enfermagem </a></li>
                             <li><a class="dropdown-item" href="geo.html">Geodésia e Cartografia</a></li>
                             <li><a class="dropdown-item" href="med.html">Mecânica </a></li>
@@ -91,13 +90,73 @@
     </nav>
     <!-- Fim da Navbar-->
 
-    <!-- Container Cursos-->
-    <div class="container myContainer pb-3">
-        <h4 class="display-5"><i class="bi bi-bricks"></i> Técnico em Edificações</h4>
-        
-    </div>     
-    <!--Fim Container Cursos-->
+    <!-- Começo do Form-->
+    <div class="container myContainer pb-2">
+        <h4 class="display-4"><i class="bi bi-chat-right"> Contato</i></h4>
+        <p class="lead">Preencha o formulário abaixo:</p>
 
+        <form action="">
+            <div class="row mt-2">
+                <div class="col-md-6 col-sm-12">
+                    <label for="nome" class="form-label">Nome:</label>
+                    <input type="text" name="nome" id="" class="form-control">
+                </div>
+
+                <div class="col-md-4 col-sm-12">
+                    <label for="email" class="form-label">Email:</label>
+                    <input type="email" name="email" id="" class="form-control">
+                </div>
+
+                <div class="col-md-2 col-sm-12">
+                    <label for="telefone" class="form-label">Telefone:</label>
+                    <input type="tel" name="telefone" id="" class="form-control">
+                </div>
+            </div>
+
+            <div class="row mt-2">
+                <div class="col-md-6 col-sm-12">
+                    <label for="cidade" class="form-label">Cidade:</label>
+                    <input type="text" name="cidade" id="" class="form-control">
+                </div>
+
+                <div class="col-md-2 col-sm-12">
+                    <label for="" class="form-label">Estado:</label>
+                    <select name="" id="" class="form-select">
+                        <option value=""></option>
+                        <option value="">SP</option>
+                        <option value="">RJ</option>
+                    </select>
+                </div>
+
+                <div class="col-md-4 col-sm-12">
+                    <label for="cep" class="form-label">CEP:</label>
+                    <input type="text" name="cep" id="cep" class="form-control">
+                </div>
+            </div>
+
+            <label for="mensagem" class="form-label mt-2">Mensagem</label>
+            <textarea name="mensagem" id="" cols="30" rows="10" class="form-control"></textarea>
+
+            <button type="submit" class="btn btn-danger mt-2"><i class="bi bi-send">Cadastrar</i></button>
+            <button type="clear" class="btn btn-danger mt-2"><i class="bi bi-trash">Limpar</i></button>
+
+        </form>
+    </div>
+    <!--Fim container contato-->
+
+    <!--container mapa -->
+    <div class="container myContainer mt-3 pb-2">
+        <h4 class="display-4"><i class="bi bi-pin-map"> Localização</i></h4>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14737.785834134398!2d-47.4251042!3d-22.5623994!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe2108428886c8646!2sCol%C3%A9gio%20T%C3%A9cnico%20de%20Limeira%20-%20Unicamp!5e0!3m2!1spt-BR!2sbr!4v1668013299266!5m2!1spt-BR!2sbr"
+            width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <!--Fim container mapa-->
+
+    <scrip type="text/javascript">
+        (()
+    </scrip>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
