--- a/Boostrap/nossaEscola.html
+++ b/Boostrap/nossaEscola.html
@@ -71,7 +71,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="nossaEscola.html">Contato</a>
+                        <a class="nav-link" href="contato.html">Contato</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled">Processo Seletivo</a>
@@ -92,46 +92,67 @@
 
     <!-- Container Cursos-->
     <div class="container myContainer pb-3">
-        <h4 class="display-4"><i class="bi bi-pen"></i> Nossa Escola</h4>
+        <h4 class="display-4 pt-2"><i class="bi bi-pen"></i> Nossa Escola</h4>
 
         <p class="lead">Essa escola vai sugar tua alma</p>
 
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
             <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
             </div>
 
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="Imagens/cotil.jpg" class="d-block w-100" alt="...">
-              </div>
+                <div class="carousel-item active">
+                    <img src="Imagens/cotil.jpg" class="d-block w-100" alt="...">
+                </div>
 
-              <div class="carousel-item">
-                <img src="Imagens/entradaCotil.jpg" class="d-block w-100" alt="...">
-              </div>
+                <div class="carousel-item">
+                    <img src="Imagens/entradaCotil.jpg" class="d-block w-100" alt="...">
+                </div>
 
-              <div class="carousel-item">
-                <img src="Imagens/galeria.jpeg" class="d-block w-100" alt="...">
-              </div>
+                <div class="carousel-item">
+                    <img src="Imagens/galeria.jpeg" class="d-block w-100" alt="...">
+                </div>
 
             </div>
 
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
             </button>
 
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
             </button>
 
-          </div>
-    
+        </div>
+
     </div>
     <!--Fim Container Cursos-->
+
+    <!-- Começo do Form-->
+    <div class="container myContainer pb-3>
+        <p class="lead"> Preencha o Formulário abaixo:</p>
+        <form>
+            <div class="row">
+                <div class="col-md-6 col-sm-12">
+                    <label class="form-label"><i class="bi bi-file-earmark-person"></i>
+                        Nome:
+                    </label> <br>
+
+                </div>
+
+            </div>
+        </form>
+    </div>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
